app/Navbar.module.scss
@import "bootstrap/scss/mixins/_color-mode.scss";
@import "../variables.scss";

$color-mode-type: data;

@include color-mode(dark) {
  .coloredNavbar {
    background-color: $dark_background;
  }
}
@include color-mode(light) {
  .coloredNavbar {
    background-color: $light_background;
  }
}

